fixed some spacing issues

--- a/_sass/style.sass
+++ b/_sass/style.sass
@@ -531,6 +531,7 @@ iframe
     letter-spacing: 2px
     line-height: 1.5em
     text-transform: uppercase
+    padding: 3px 15px
 .schedule,
 .beer-cans
   p
@@ -832,5 +833,7 @@ footer p
 @mixin name
   $social-view-width: (620 / 2)px
   
-#lawrenceville-events
-  display: inline-block
+#lawrenceville-events,
+#zelienople-events
+  .events
+    display: inline-block
